# atlas-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: run-tests.yml  scorecard.yml
docs/: DEVELOPMENT.md  EXAMPLES.md  USER_GUIDE.md
examples/mnist/: README.md  collect_mnist_provenance.sh  pyproject.toml
make/: config.mk  development.mk  examples.mk  installation.mk
src/: asset.rs  lib.rs  main.rs  utils.rs
src/cc_attestation/: mock.rs  mod.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/error/: mod.rs  types.rs
src/hash/: mod.rs  utils.rs
src/manifest/: common.rs  config.rs  dataset.rs  evaluation.rs  mod.rs  model.rs  software.rs  utils.rs
src/signing/: mod.rs  utils.rs
src/storage/: config.rs  database.rs  filesystem.rs  mod.rs  rekor.rs  traits.rs
src/tests/: cc_attestation.rs  common.rs  hash.rs  manifest.rs  manifest_attestation.rs  mod.rs  storage.rs
storage_service/: Cargo.toml  Dockerfile  compose.yml
storage_service/src/: main.rs
