[package]
name = "c2pa_storage_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
mongodb = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"